--- a/bookmarks.html
+++ b/bookmarks.html
@@ -6,20 +6,10 @@ group: navigation
 ---
 {% include JB/setup %}
 
-<table border="0" cellPadding="6" cellSpacing="2">
-<tr align="left" bgcolor="rgb(184,255,184)">
-    <th>&nbsp;</th>
-    <td>&nbsp;</td>
-</tr>
-
+<table border="1 solid teal" cellPadding="6" cellSpacing="0">
 <tr align="left">
     <th>分类</th>
     <td>书签</td>
-</tr>
-
-<tr align="left" bgcolor="rgb(184,255,184)">
-    <th>&nbsp;</th>
-    <td>&nbsp;</td>
 </tr>
 
 <tr align="left">
@@ -84,11 +74,6 @@ group: navigation
     <td><a href="" target="_blank"></a></td>
 </tr>
 
-<tr align="left" bgcolor="rgb(184,255,184)">
-    <th>&nbsp;</th>
-    <td>&nbsp;</td>
-</tr>
-
 <tr align="left">
     <th rowspan="10">Ubuntu</th>
     <td><a href="" target="_blank"></a></td>
@@ -121,11 +106,6 @@ group: navigation
     <td><a href="" target="_blank"></a></td>
 </tr>
 
-<tr align="left" bgcolor="rgb(184,255,184)">
-    <th>&nbsp;</th>
-    <td>&nbsp;</td>
-</tr>
-
 <tr align="left">
     <th rowspan="5">DB</th>
     <td><a href="http://downloads.mysql.com/archives.php" target="_blank">Mysql Product Archives</a></td>
@@ -141,14 +121,6 @@ group: navigation
 </tr>
 <tr align="left">
     <td><a href="" target="_blank"></a></td>
-</tr>
-<tr align="left">
-    <td><a href="" target="_blank"></a></td>
-</tr>
-
-<tr align="left" bgcolor="rgb(184,255,184)">
-    <th>&nbsp;</th>
-    <td>&nbsp;</td>
 </tr>
 
 <tr align="left">
@@ -168,11 +140,6 @@ group: navigation
     <td><a href="" target="_blank"></a></td>
 </tr>
 
-<tr align="left" bgcolor="rgb(184,255,184)">
-    <th>&nbsp;</th>
-    <td>&nbsp;</td>
-</tr>
-
 <tr align="left">
     <th rowspan="5">Html</th>
     <td><a href="http://www.w3schools.com/default.asp" target="_blank">W3Schools Online Web Tutorials</a></td>
@@ -190,11 +157,6 @@ group: navigation
     <td><a href="" target="_blank"></a></td>
 </tr>
 
-<tr align="left" bgcolor="rgb(184,255,184)">
-    <th>&nbsp;</th>
-    <td>&nbsp;</td>
-</tr>
-
 <tr align="left">
     <th rowspan="5">Cartoon</th>
     <td><a href="http://comic.sfacg.com/HTML/OnePiece/" target="_blank">海贼王/One Piece</a></td>
@@ -210,14 +172,6 @@ group: navigation
 </tr>
 <tr align="left">
     <td><a href="" target="_blank"></a></td>
-</tr>
-<tr align="left">
-    <td><a href="" target="_blank"></a></td>
-</tr>
-
-<tr align="left" bgcolor="rgb(184,255,184)">
-    <th>&nbsp;</th>
-    <td>&nbsp;</td>
 </tr>
 
 <tr align="left">
@@ -257,20 +211,9 @@ group: navigation
 <tr align="left">
     <td><a href="" target="_blank"></a></td>
 </tr>
-<tr align="left">
-    <td><a href="" target="_blank"></a></td>
-</tr>
-
-<tr align="left" bgcolor="rgb(184,255,184)">
-    <th>&nbsp;</th>
-    <td>&nbsp;</td>
-</tr>
 
 <tr align="left">
     <th rowspan="5">Blank</th>
-    <td><a href="" target="_blank"></a></td>
-</tr>
-<tr align="left">
     <td><a href="" target="_blank"></a></td>
 </tr>
 <tr align="left">
