Chang rgb.md to rgb.html to support <table>

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -6,10 +6,10 @@ group: navigation
 ---
 {% include JB/setup %}
 
-<table border="1 solid teal" cellPadding="6" cellSpacing="0">
-<tr align="left">
-    <th>分类</th>
-    <td>书签</td>
+<table border="1 solid teal" width="750" cellPadding="6" cellSpacing="0">
+<tr align="center">
+    <th width="30%">分类</th>
+    <th width="30%">书签</th>
 </tr>
 
 <tr align="left">
