rvm: ~/.bash_profile-->~/.bashrc

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -58,19 +58,19 @@ group: navigation
             <td><a href="http://278801374.iteye.com/blog/1564991" target="_blank">Today Aim OA系统</a></td>
         </tr>
         <tr align="left">
-            <td><a href="" target="_blank"></a></td>
+            <td><a href="http://www.iteye.com/topic/1126678" target="_blank">用nexus搭建maven私服</a></td>
         </tr>
         <tr align="left">
-            <td><a href="" target="_blank"></a></td>
+            <td><a href="http://juvenshun.iteye.com/blog/349534" target="_blank">Nexus入门指南（图文）</a></td>
         </tr>
         <tr align="left">
-            <td><a href="" target="_blank"></a></td>
+            <td><a href="http://maven.apache.org/guides/getting-started/maven-in-five-minutes.html" target="_blank">Maven in 5 Minutes</a></td>
         </tr>
         <tr align="left">
-            <td><a href="" target="_blank"></a></td>
+            <td><a href="http://maven.apache.org/guides/getting-started/index.html" target="_blank">Maven Getting Started Guide</a></td>
         </tr>
         <tr align="left">
-            <td><a href="" target="_blank"></a></td>
+            <td><a href="http://maven.apache.org/guides/introduction/introduction-to-the-lifecycle.html" target="_blank">Introduction to the Build Lifecycle</a></td>
         </tr>
         <tr align="left">
             <td><a href="" target="_blank"></a></td>
@@ -131,6 +131,23 @@ group: navigation
         </tr>
         <tr align="left">
             <td><a href="" target="_blank"></a></td>
+        </tr>
+        <tr align="left">
+            <td><a href="" target="_blank"></a></td>
+        </tr>
+        <tr align="left">
+            <td><a href="" target="_blank"></a></td>
+        </tr>
+        <tr align="left">
+            <td><a href="" target="_blank"></a></td>
+        </tr>
+
+        <tr align="left">
+            <th align="center" rowspan="5">jekyll</th>
+            <td><a href="http://wowubuntu.com/markdown/" target="_blank">Markdown 语法说明 (简体中文版)</a></td>
+        </tr>
+        <tr align="left">
+            <td><a href="http://markdown.tw/" target="_blank">Markdown: Syntax</a></td>
         </tr>
         <tr align="left">
             <td><a href="" target="_blank"></a></td>
