add windows manual

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -77,7 +77,7 @@ group: navigation
         </tr>
 
         <tr align="left">
-            <th align="center" rowspan="10">Ubuntu</th>
+            <th align="center" rowspan="10">Linux</th>
             <td><a href="" target="_blank"></a></td>
         </tr>
         <tr align="left">
@@ -96,7 +96,7 @@ group: navigation
             <td><a href="http://en.wikipedia.org/wiki/List_of_Unix_utilities" target="_blank">List of Unix utilities</a></td>
         </tr>
         <tr align="left">
-            <td><a href="" target="_blank"></a></td>
+            <td><a href="http://www.openfans.org/" target="_blank">OpenFans-CecOS</a></td>
         </tr>
         <tr align="left">
             <td><a href="" target="_blank"></a></td>
