ubuntu type,shell function return string

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -216,7 +216,7 @@ group: navigation
             <td><a href="http://jntv.ijntv.cn/ent/" target="_blank">济南电视台</a></td>
         </tr>
         <tr align="left">
-            <td><a href="" target="_blank"></a></td>
+            <td><a href="http://www.bathome.net/index.php" target="_blank">批处理之家</a></td>
         </tr>
         <tr align="left">
             <td><a href="" target="_blank"></a></td>
