--- a/bookmarks.html
+++ b/bookmarks.html
@@ -109,6 +109,32 @@ group: navigation
         </tr>
 
         <tr align="left">
+            <th align="center" rowspan="8">Source Codes Search Engine</th>
+            <td><a href="http://code.ohloh.net/" target="_blank">Ohloh Code</a></td>
+        </tr>
+        <tr align="left">
+            <td><a href="http://www.krugle.com/" target="_blank">Krugle</a></td>
+        </tr>
+        <tr align="left">
+            <td><a href="http://searchcode.com/" target="_blank">SearchCode</a></td>
+        </tr>
+        <tr align="left">
+            <td><a href="http://nerdydata.com/" target="_blank">NerdyData</a></td>
+        </tr>
+        <tr align="left">
+            <td><a href="http://www.symbolhound.com/" target="_blank">SymbolHound</a></td>
+        </tr>
+        <tr align="left">
+            <td><a href="www.merobase.com" target="_blank">MeroBase</a></td>
+        </tr>
+        <tr align="left">
+            <td><a href="" target="_blank"></a></td>
+        </tr>
+        <tr align="left">
+            <td><a href="" target="_blank"></a></td>
+        </tr>
+
+        <tr align="left">
             <th align="center" rowspan="5">DB</th>
             <td><a href="http://downloads.mysql.com/archives.php" target="_blank">Mysql Product Archives</a></td>
         </tr>
